# hopthu

./: .editorconfig  .gitignore  DOCTHU_ISSUE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_DOCTHU_BUGS.md  LICENSE  QWEN.md  README.md  alembic.ini  create_template_from_email.py  extract_exact_template.py  process-compose.yml  pyproject.toml  run.py  shell.nix  test_full_template.py  test_template.py  test_template_debug.py  update_template.py  update_template_v2.py  update_template_v3.py
.qwen/: settings.json
docs/: IMPLEMENTATION_SUMMARY.md  implement-frontend-guidline.md
docs/knowledges/: template-handling.md
docs/plan/: init.md  phase3.md  phase4.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  app.jsx  constants.js  index.css
frontend/src/components/: Button.jsx  Card.jsx  EmailList.jsx  EmailViewer.jsx  GmailLayout.jsx  Header.jsx  Layout.jsx  Sidebar.jsx  SourcePickerModal.jsx  Toast.jsx  UserDropdown.jsx
frontend/src/lib/: base.js
migrations/: env.py
migrations/versions/: 362aa8ee1f06_add_timezone_field_to_accounts.py  736587dbf37d_init_tables.py  8d40df50ca40_add_fields_to_connection.py  a46dfce454b0_remove_body_template_from_triggers.py  add_fields_metadata.py  c8da9b7c9ade_add_connections_triggers_and_trigger_.py  df52b23816c0_make_trigger_log_email_id_nullable.py  remove_fields_metadata.py
src/hopthu/: __init__.py
src/hopthu/app/: db.py  (+4 more)
tests/: test_connections.py  test_database.py  test_extraction_flow.py  test_payload_builder.py  test_trigger_execution.py  test_trigger_models.py  test_triggers.py
(+43 files in other folders)
