[project]
name = "hopthu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "aioimaplib>=2.0.1",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "cryptography>=46.0.6",
    "docthu",
    "greenlet>=3.3.2",
    "quart>=0.20.0",
    "sqlalchemy>=2.0.49",
    "werkzeug>=3.1.8",
]

[project.scripts]
hopthu = "hopthu:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
docthu = { git = "https://github.com/locnguyenvu/docthu.git" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
